--- a/quizes/Makefile
+++ b/quizes/Makefile
@@ -1,10 +1,10 @@
 # Makefile produced by _mmakefile
 
 CC = gcc
-LDFLAGS = -lm
+LDFLAGS =
 CFLAGS = -std=gnu99 -Wall -ggdb
 
-sources = quiz3.c
+sources = quiz_4.c
 
 a.out : $(sources)
 	$(CC) $(CFLAGS) $(LDFLAGS) $(sources)
