--- a/labs/Lab_3_solutions/Makefile
+++ b/labs/Lab_3_solutions/Makefile
@@ -1,10 +1,10 @@
 # Makefile produced by _mmakefile
 
 CC = gcc
-LDFLAGS =
+LDFLAGS = -lm
 CFLAGS = -std=gnu99 -Wall -ggdb
 
-sources = quiz5.c
+sources = q1.c
 
 a.out : $(sources)
 	$(CC) $(CFLAGS) $(LDFLAGS) $(sources)
